--- a/src/Makefile
+++ b/src/Makefile
@@ -2,5 +2,13 @@ obj-m+=mydriver.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build/ M=$(PWD) modules
+
 clean:
 	make -C /lib/modules/$(shell uname -r)/build/ M=$(PWD) clean
+
+# $ make test
+test:	
+	dmesg -C
+	insmod mydriver.ko
+	rmmod mydriver.ko
+	dmesg
