Update Makefile test
This reverts commit c637fe57a27ff3bccbb56e42640e073a41ce9c09.

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,5 +10,11 @@ clean:
 test:	
 	sudo dmesg -C
 	sudo insmod mydriver.ko
+	sudo mknod /dev/mydriver0 c 238 0
+	sudo mknod /dev/mydriver1 c 238 1
+	echo 'test mydriver0' > /dev/mydriver0
+	cat /dev/mydriver0
+	echo 'test mydriver1' > /dev/mydriver1
+	cat /dev/mydriver1
 	sudo rmmod mydriver.ko
 	sudo dmesg
